--- a/style.css
+++ b/style.css
@@ -361,7 +361,7 @@ p {
 
     .two { padding: 8vh 3vw; }
 
-    .title { font-size: 4vh; }
+    .title { font-size: 40px; }
 
     .playBtn { margin: 20px 10px; }
 
@@ -372,7 +372,20 @@ p {
         padding: 5vh 2vw;
     }
 
-    h2 {  font-size: 17px;  }
+    h2 {  font-size: 15px;  }
+    .quote {
+        font-size: 20px;
+        padding: 5px 5px;
+    }
+
+    p {
+        font-size: 5px;
+        text-align: center;
+        line-height: .9rem;
+        padding: 2px 8px 10px;
+
+    }
+
 
     .song-one .song-three .song-two .song-five .song-four {
         width: 80vw;
