--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ p {
 
 
 
-@media (max-width: 480px) {
+@media  (max-width: 80mm) and (max-height: 200mm)  {
     #previous { margin-left: 22vw;    }
 
     .quote {
@@ -347,7 +347,7 @@ p {
 
 }
 
-@media (max-width: 480px) {
+@media (max-width: 80mm) and (max-height: 200mm) {
 
     .first-container {
         height: 35vh;
