--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ p {
     }
 
     p {
-        font-size: 10px;
+        font-size: 8px;
         text-align: center;
         line-height: 1rem;
         padding: 2px 10px 10px;
@@ -372,9 +372,10 @@ p {
         padding: 5vh 2vw;
     }
 
+    h2 {font-size: 15px};
     
     .quote {
-        font-size: 20px;
+        font-size: 18px;
         padding: 5px 5px;
     }
 
